--- a/src/layouts/RootLayout.astro
+++ b/src/layouts/RootLayout.astro
@@ -1,5 +1,6 @@
 ---
 import Nav from '../components/Nav.astro';
+import Footer from '../components/Footer.astro';
 ---
 
 <html
@@ -17,6 +18,7 @@ import Nav from '../components/Nav.astro';
         <main class="flex-auto min-w-0 mt-6 flex flex-col px-2 md:px-0">
             <Nav />
             <slot />
+            <Footer />
         </main>
     </body>
 </html>
